@@ -26,36 +26,55 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-/*
- * TODO: Work on the method descriptions and rework the class description.
- * Compact the code.
- */
-
 /**
- * <p>A class that represents a directory in a file system.</p>
+ * A class that represents a directory in a file system.
+ * 
+ * <p>This class extends from {@link PacObject}, keeping its file path
+ * variable and the methods related to it. But because this class is
+ * treated like a directory in the file system, it features new variables
+ * and methods that are unique to it and is related to directories in the
+ * system's disk.</p>
+ * 
+ * @author GarlicDude
  */
-public final class PacDirectory extends PacObject implements Loadable, Savable {
+public final class PacDirectory extends PacObject
+implements Loadable, Savable {
 	
 	/**
-	 * <p>The files within the directory.</p>
+	 * The list of files within the directory.
+	 * 
+	 * <p>By default, this list is empty, indicating that the directory is
+	 * closed via the {@link #close()} method. On the contrary, if the list
+	 * is loaded, it indicates that it is opened via the {@link #open()}
+	 * method.</p>
 	 */
 	private final List<PacFile> files = new ArrayList<PacFile>();
 	
 	/**
-	 * <p>Loads the directory.</p>
+	 * Opens the directory from the system's disk.
+	 * 
+	 * <p>This will load the entries that are within the directory to
+	 * memory as {@link PacFile} objects. But this method does not open
+	 * them upon creating them.</p>
+	 * 
+	 * @throws IOException if reading from disk fails.
 	 */
 	@Override
 	public void open() throws IOException {
-		try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(path)) {
+		try (DirectoryStream<Path> directoryStream =
+				Files.newDirectoryStream(path)) {
 			for (Path path : directoryStream) {
-				PacFile rom = PacFile.from(path);
-				files.add(rom);
+				PacFile file = new PacFile(path);
+				files.add(file);
 			}
 		}
 	}
 	
 	/**
-	 * <p>Unloads the directory and its files.</p>
+	 * Closes the directory and its files, freeing everything from memory.
+	 * 
+	 * <p>What this will do is close every file entry, freeing their bytes
+	 * from memory. Then the {@link #files} list will be cleared.</p>
 	 */
 	@Override
 	public void close() {
@@ -67,24 +86,39 @@ public final class PacDirectory extends PacObject implements Loadable, Savable {
 	}
 	
 	/**
-	 * <p>Saves the files within the directory.</p>
+	 * Saves the file entries within the directory to the system's disk.
+	 * 
+	 * <p>Because directories cannot be saved, only the file entries can
+	 * be overwritten with their bytes. Additionally, only the
+	 * {@link PacFile} objects that are currently opened can be saved to
+	 * the system's disk.</p>
+	 * 
+	 * @throws IOException if writing from disk fails.
 	 */
 	@Override
-	public final void save() throws IOException {
+	public void save() throws IOException {
 		for (PacFile file : files) {
 			file.save();
 		}
 	}
 	
 	/**
-	 * <p>Returns an unmodifiable list of files in the PacDirectory.</p>
+	 * Returns an unmodifiable list of {@link #files} in the PacDirectory.
+	 * 
+	 * @return an unmodifiable list of {@link #files}.
 	 */
-	public List<PacFile> getFiles() {
+	public final List<PacFile> getFiles() {
 		return Collections.unmodifiableList(files);
 	}
 	
 	/**
-	 * <p>Finds a specific file within the directory.</p>
+	 * Finds a specific file within the directory.
+	 * 
+	 * <p>If the method cannot find a file entry that matches the
+	 * {@code name}, it will return null instead.</p>
+	 * 
+	 * @param name the file name that the method will look for.
+	 * @return the {@link PacFile} that matches the {@code name}.
 	 */
 	public final PacFile find(final String name) {
 		for (PacFile file : files) {
@@ -94,33 +128,61 @@ public final class PacDirectory extends PacObject implements Loadable, Savable {
 	}
 	
 	/**
-	 * <p>Creates a new PacDirectory using a path.</p>
+	 * Creates a new {@link PacDirectory} using a file path, and
+	 * automatically opens it, loading its entries to memory.
+	 * 
+	 * @param path the file path to the directory in the system's disk.
+	 * @return a {@link PacDirectory} that's automatically opened.
+	 * @throws IOException if reading from disk fails.
 	 */
 	public static PacDirectory from(final Path path) throws IOException {
-		PacDirectory romSet = new PacDirectory(path);
-		return romSet;
+		PacDirectory directory = new PacDirectory(path);
+		directory.open();
+		return directory;
 	}
 	
 	/**
-	 * <p>Creates a new PacDirectory using a URI.</p>
+	 * Creates a new {@link PacDirectory} using a URI reference of the file
+	 * path, and automatically opens it to memory.
+	 * 
+	 * @param pathURI the URI reference of the file path.
+	 * @return a {@link PacDirectory} that's automatically opened.
+	 * @throws IOException if reading from disk fails.
 	 */
 	public static PacDirectory from(final URI pathURI) throws IOException {
 		Path path = Paths.get(pathURI);
-		PacDirectory romSet = from(path);
-		return romSet;
+		PacDirectory directory = from(path);
+		return directory;
 	}
 	
 	/**
-	 * <p>Creates a new PacDirectory using a string.</p>
+	 * Creates a new {@link PacDirectory} using a string of the file path,
+	 * and automatically opens it to memory.
+	 * 
+	 * @param pathString the string of the file path.
+	 * @return a {@link PacDirectory} that's automatically opened.
+	 * @throws IOException if reading from disk fails.
 	 */
-	public static PacDirectory from(final String pathString) throws IOException {
+	public static PacDirectory from(final String pathString)
+			throws IOException {
 		Path path = Paths.get(pathString);
-		PacDirectory romSet = from(path);
-		return romSet;
+		PacDirectory directory = from(path);
+		return directory;
 	}
 	
 	/**
-	 * <p>The main constructor of the PacRomSet.</p>
+	 * Creates a new {@link PacDirectory} using a file path.
+	 * 
+	 * <p>This does not automatically open the {@link PacDirectory} when
+	 * created. If the {@link PacDirectory} is created and needs to be
+	 * opened, calling {@link #open()} from the object will do the
+	 * trick.</p>
+	 * 
+	 * <p>The sole parameter, {@code path}, cannot be null. Otherwise, it
+	 * will throw the {@link IllegalArgumentException} if this happens.</p>
+	 * 
+	 * @param path the file path to the directory in the system's disk.
+	 * @throws IllegalArgumentException if {@code path} is null.
 	 */
 	protected PacDirectory(final Path path) {
 		super(path);
